--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Crypto Is the future</h1>
     <p><img src="images/bitcoin_rotate.gif"></p>
+<form>
+    <legend>New Blockchain</legend>
+    <input name='name' placeholder="Name"><br/>
+    <input name='description' placeholder="Description">
+    <input type='Submit'>
+</form>
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/client.js"></script>
